<resources>
    <string name="app_name">Beer Please</string>

    <string name="camera_compare_btn">Compare</string>

    <string name="pd_camera_dialog_title">Доступ к камере запрещен</string>
    <string name="pd_camera_dialog_description">Вы можете разрешить доступ в Настройках</string>
    <string name="pd_camera_dialog_cancel">ОТМЕНА</string>
    <string name="pd_camera_dialog_settings">В НАСТРОЙКИ</string>

    <string name="search_hint_et">Search for good beer…</string>
    <string name="search_checked_text">checked</string>
    <string name="search_add_beer_text">Add beer</string>
    <string name="search_title_not_found">Oops… \nNo results found for \n“%1$s”</string>
    <string name="search_description_not_found">Can’t find the beer you’re looking for?\nTry to find it by scanner or…</string>

    <string name="beer_card_button_check_in">Check-in</string>
    <string name="beer_card_button_check_in_again">Check-in again</string>
    <string name="beer_card_checked_ins_text">3 checked-ins</string>
    <string name="beer_card_add_wishlist">Add to list</string>
    <string name="beer_card_added_wishlist">Added to list</string>
    <string name="beer_card_abv_title">%d% ABV</string>
    <string name="beer_card_abv_description">Alcohol by Volume</string>
    <string name="beer_card_ibu_title">%d IBU</string>
    <string name="beer_card_ibu_description">International Bitterness Unit</string>
    <string name="beer_card_be_first_rate_btn">Be the first to rate this beer</string>
    <string name="beer_card_canned_type">Canned beer</string>
    <string name="beer_card_bottled_type">Bottled beer</string>
    <string name="beer_card_tapped_type">Tapped beer</string>

    <string name="beer_card_menu_suggest_changes">Suggest changes</string>
    <string name="beer_card_menu_report_duplicate">Report a duplicate</string>
    <string name="beer_card_menu_report_problem">Report a problem</string>

    <string name="add_new_beer_title">Add new beer</string>
    <string name="add_new_beer_beername_hint">Beer name</string>
    <string name="add_new_beer_beername_bhint">Don`t include the brewery name</string>
    <string name="add_new_beer_brewery_hint">Brewery*</string>
    <string name="add_new_beer_brewery_bhint">Search</string>
    <string name="add_new_beer_style_hint">Style*</string>
    <string name="add_new_beer_style_bhint">Pick only one style</string>
    <string name="add_new_beer_alcohol_hint">Alcohol*, %</string>
    <string name="add_new_beer_alcohol_bhint">Alcohol by Volume (Ex. 4.2)</string>
    <string name="add_new_beer_ibu_hint">IBU</string>
    <string name="add_new_beer_ibu_bhint">International Bitterness Unit (Ex. 100)</string>


</resources>
