<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/beerAppBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_64dp"
            android:elevation="@dimen/elevation_5dp">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/beerToolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_64dp"
                android:background="@color/colorPrimary"
                app:titleTextColor="@color/text_color"
                app:subtitleTextColor="@color/gray_text_btn"
                app:navigationIcon="@drawable/ic_back_arrow_ios_gray"
                app:titleTextAppearance="@style/ToolbarTextStyle.Title"
                app:subtitleTextAppearance="@style/ToolbarTextStyle.Subtitle"
                app:buttonGravity="center_vertical"
                app:layout_scrollFlags="scroll|enterAlways"
                app:title="It's over 9000 passion fruit"
                app:subtitle="AF brew, Russia"/>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
            android:id="@+id/mainContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/mainImage"
                    android:layout_width="0dp"
                    android:layout_height="312dp"
                    android:src="@drawable/ic_beer_card"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            <Button
                    android:id="@+id/buttonCheckIn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/AppButton.WhiteOnBlack"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:text="@string/beer_card_button_check_in"
                    app:layout_constraintStart_toStartOf="@id/mainImage"
                    app:layout_constraintEnd_toEndOf="@id/mainImage"
                    app:layout_constraintTop_toBottomOf="@id/mainImage"
                    app:layout_constraintBottom_toBottomOf="@id/mainImage" />

            <LinearLayout
                    android:id="@+id/ratingLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/margin_32dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    app:layout_constraintTop_toBottomOf="@id/buttonCheckIn"
                    app:layout_constraintStart_toStartOf="@id/mainImage">
                <ImageView
                        android:layout_width="@dimen/margin_16dp"
                        android:layout_height="@dimen/margin_16dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_star_rating"/>

                <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_4dp"
                        android:textSize="@dimen/text_size_15sp"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/text_color"
                        android:lineSpacingExtra="6sp"
                        android:layout_gravity="center_vertical"
                        android:text="4,8"/>

                <TextView
                        android:id="@+id/countRates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_4dp"
                        android:textSize="@dimen/text_size_15sp"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/gray_text_btn"
                        android:lineSpacingExtra="6sp"
                        android:layout_gravity="center_vertical"
                        android:text="357" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/countCheckedInsLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_24dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="@id/ratingLayout"
                    app:layout_constraintBottom_toBottomOf="@id/ratingLayout"
                    app:layout_constraintStart_toEndOf="@id/ratingLayout">

                <TextView
                        android:id="@+id/countCheckedIns"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textSize="@dimen/text_size_15sp"
                        android:lineSpacingExtra="6sp"
                        android:textColor="@color/checked_text_color"
                        android:text="@string/beer_card_checked_ins_text"/>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="@dimen/margin_26dp">

                    <ImageView
                            android:id="@+id/addToWishList"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_white_heart"
                            android:layout_gravity="center_vertical"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/margin_4dp"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size_15sp"
                            android:lineSpacingExtra="11sp"
                            android:text="@string/beer_card_add_wishlist" />
                </LinearLayout>
            </LinearLayout>

            <include
                    android:id="@+id/beerSpecificationLayout"
                    layout="@layout/beer_specification_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_28dp"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    app:layout_constraintTop_toBottomOf="@id/ratingLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                    android:id="@+id/beerDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_28dp"
                    android:textSize="@dimen/text_size_14sp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/text_color"
                    android:lineSpacingExtra="@dimen/text_size_12sp"
                    app:layout_constraintTop_toBottomOf="@id/beerSpecificationLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="Beer is one of the oldest and most widely consumed  alcoholic drinks in the world, and the third most popular drink overall after water and tea. Beer is brewed from cereal grains—most commonly from malted barley, though wheat, maize (corn), and rice are also used." />

            <Button
                    android:id="@+id/rateBeerBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16dp"
                    android:layout_marginEnd="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_32dp"
                    android:layout_marginBottom="@dimen/margin_64dp"
                    android:text="@string/beer_card_be_first_rate_btn"
                    style="@style/AppButton.WhiteOnYellow"
                    app:layout_constraintTop_toBottomOf="@id/beerDescription"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>